# boglebench

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
boglebench/: __init__.py
boglebench/cli/: __init__.py  commands.py
boglebench/core/: __init__.py  attribution.py  brinson_attribution.py  composite_benchmark.py  constants.py  dates.py  db_operations.py  db_schema.py  dividend_processor.py  dividend_validator.py  helpers.py  history_builder.py  market_data.py  metrics.py  portfolio.py  portfolio_allocations.py  portfolio_db.py  portfolio_db_inserts.py  portfolio_db_mixins_protocol.py  portfolio_db_queries.py  results.py  short_position_handler.py  symbol_attributes.py  symbol_attributes_loader.py  transaction_loader.py  types.py
boglebench/templates/: config_template.yaml  logging_config_template.yaml  sample_attributes.csv  sample_transactions.csv
boglebench/utils/: __init__.py  config.py  logging_config.py  performance.py  profiling.py  timing.py  tools.py  workspace.py
boglebench/visualization/: __init__.py  charts.py
examples/: basic_analysis.py
tests/: manual_validation.py  test_advanced_attribution.py  test_boglebench.py  test_bulk_insert.py  test_bulk_insert_performance.py  test_caching_optimization.py  test_calculate_performance_db.py  test_composite_benchmark.py  test_composite_benchmark_rebalancing.py  test_date_scenarios.py  test_db_schema_sqlite.py  test_dividend_compare.py  test_dividend_scenarios.py  test_dividend_validator.py  test_double_transaction_performance.py  test_future_dividends.py  test_parallel_export.py  test_performance_calculation.py  test_performance_with_dividends.py  test_price_lookup_performance.py  test_short_position_handler.py  test_short_position_integration.py  test_simple.py  test_timestamp_conversion_performance.py  test_transaction_validation.py  test_vectorized_cash_flows.py
tests/test_data/: AAPL_market_data_pytest.csv  MSFT_market_data_pytest.csv  SPY_market_data_pytest.csv  bad_data_missing_columns_pytest.csv  clean_data_with_ISO8601_dates_pytest.csv  clean_data_with_bad_dates_pytest.csv  data_without_account_col_pytest.csv  default_simple_transactions_pytest.csv  double_transactions_pytest.csv  single_purchase_pytest.csv
