[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "boglebench"
version = "0.1.0"
description = "Portfolio performance analysis and benchmarking in the spirit of John Bogle"
authors = [{ name = "Tom Marshall", email = "tom.q.marshall@gmail.com>" }]
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "portfolio",
    "finance",
    "investment",
    "performance",
    "analytics",
    "bogle",
    "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.14,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "PyYAML>=6.0.1,<7.0",
    "click>=8.1,<9.0",
    "empyrical-reloaded>=0.5.10,<1.0", # Prefer this over empyrical:
    "alpha-vantage>=3.0.0",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pandas-market-calendars (>=5.1.1,<6.0.0)",
]

requires-python = ">= 3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0",
    "black>=25.1",
    "ruff>=0.5,<1.0",   # faster, modern replacement for flake8 (optional)
    # "flake8>=7.0,<8.0"    # if you prefer flake8, use a recent version
    "build>=1.2,<2.0",
    # "twine>=5.0,<6.0"       # only if you still need it; Poetry can publish
    "pre-commit>=3.6,<4.0",
    "types-pyyaml>=6.0.12.20250822",
    "pandas-stubs>=2.3.0.250703",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
]

jupyter = ["jupyter>=1.0", "plotly>=5.20", "ipywidgets>=8.0"]

[project.urls]
"Homepage" = "https://github.com/qwertytam/boglebench"
"Bug Tracker" = "https://github.com/qwertytam/boglebench/issues"
"Documentation" = "https://github.com/qwertytam/boglebench#readme"
"Repository" = "https://github.com/qwertytam/boglebench"


[project.scripts]
boglebench-init = "boglebench.cli.commands:init_workspace"
boglebench-analyze = "boglebench.cli.commands:run_analysis"
boglebench-holdings = "boglebench.cli.commands:show_holdings"
boglebench-validate = "boglebench.cli.commands:validate_transactions"

# Development tools configuration
[tool.black]
line-length = 80
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=boglebench"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
