[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boglebench"
version = "0.1.0"
description = "Portfolio performance analysis and benchmarking in the spirit of John Bogle"
authors = ["Tom Marshall <tom.q.marshall@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/qwertytam/boglebench"
repository = "https://github.com/qwertytam/boglebench"
keywords = [
    "portfolio",
    "finance",
    "investment",
    "performance",
    "analytics",
    "bogle",
    "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
packges = [{include = "boglebench"}]
include = ["boglebench/templates/*.yaml", "boglebench/templates/*.ipynb"]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.0"
pandas = "^2.2"
scipy = "^1.14"
matplotlib = "^3.8"
seaborn = "^0.13"
PyYAML = "^6.0.1"
click = "^8.1"
empyrical-reloaded = "^0.5.10"       # Prefer this over empyrical:
alpha-vantage = "3.0.0"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"
pandas-market-calendars = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
black = "^25.1"
ruff = "^0.5"   # faster, modern replacement for flake8 (optional)
build = "^1.2"
pre-commit = "^3.6"
types-pyyaml = "^6.0.12"
pandas-stubs = "^2.3.0"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0"
plotly = "^5.20"
ipywidgets = "^8.0"

[tool.poetry.scripts]
boglebench-init = "boglebench.cli.commands:init_workspace"
boglebench-analyze = "boglebench.cli.commands:run_analysis"
boglebench-holdings = "boglebench.cli.commands:show_holdings"
boglebench-validate = "boglebench.cli.commands:validate_transactions"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/qwertytam/boglebench/issues"
"Documentation" = "https://github.com/qwertytam/boglebench#readme"

# Development tools configuration
[tool.black]
line-length = 80
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=boglebench"

[tool.isort]
profile = "black"
multi_line_output = 3
