[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "boglebench"
version = "0.1.0"
description = "Portfolio performance analysis and benchmarking in the spirit of John Bogle"
authors = [{ name = "Tom Marshall", email = "tom.q.marshall@gmail.com>" }]
readme = "README.md"
license = "MIT"
keywords = [
    "portfolio",
    "finance",
    "investment",
    "performance",
    "analytics",
    "bogle",
    "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "PyYAML>=6.0.1,<7.0",
    "click>=8.1,<9.0",
    "empyrical-reloaded>=0.5.10,<1.0",       # Prefer this over empyrical:
    "alpha-vantage>=3.0.0",
    "pandas-market-calendars>=5.1.1,<6.0.0",
    "numpy-financial (>=1.0.0,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
]

requires-python = ">= 3.13, < 4.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.2",
    "black>=25.1",
    "ruff>=0.5,<1.0",                    # faster, modern replacement for flake8 (optional)
    "build>=1.2,<2.0",
    "pre-commit>=3.6,<4.0",
    "types-pyyaml>=6.0.12.20250822",
    "pandas-stubs>=2.3.0.250703",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
]

jupyter = ["jupyter>=1.0", "plotly>=5.20", "ipywidgets>=8.0"]

[project.urls]
"Homepage" = "https://github.com/qwertytam/boglebench"
"Bug Tracker" = "https://github.com/qwertytam/boglebench/issues"
"Documentation" = "https://github.com/qwertytam/boglebench#readme"
"Repository" = "https://github.com/qwertytam/boglebench"


[project.scripts]
boglebench-init = "boglebench.cli.commands:init_workspace"
boglebench-analyze = "boglebench.cli.commands:run_analysis"
boglebench-holdings = "boglebench.cli.commands:show_holdings"
boglebench-validate = "boglebench.cli.commands:validate_transactions"

[tool.poetry]
include = [
    "boglebench/templates/*.yaml",
    "boglebench/templates/*.ipynb",
    "boglebench/templates/*.csv",
]

# Development tools configuration
[tool.black]
line-length = 79
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=boglebench"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 79

[dependency-groups]
dev = ["deptry (>=0.24.0,<0.25.0)"]

[tool.deptry]
# Ignore packages that are used by tools, not imported in code
ignore_notebooks = true # This fixes the Jupyter notebook error

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Development tools (not imported, used via CLI)
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "build",
    "pre-commit",
    "deptry",

    # Type stubs (not imported directly)
    "types-pyyaml",
    "pandas-stubs",

    # Optional dependencies (jupyter group)
    "jupyter",
    "plotly",
    "ipywidgets",

    # Used for parquet support
    "fastparquet",
    "pyarrow",
]
